- IntelliJの警告を対策
- runメソッドの不要なthrowを削除
- sorted()の比較をComparator.comparing, Comparator.comparingIntに置き換え
- get(0)をgetFirst()に置き換え（Java 21機能）